Initial commit with user.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="card-body">
           <h5 class="card-title fw-bold">Employee</h5>
           <p class="card-text">Submit your name, email, location, and upload a photo to mark your attendance.</p>
-          <a href="#" class="btn btn-success">Submit Attendance</a>
+          <a href="user.html" class="btn btn-success">Submit Attendance</a>
         </div>
       </div>
     </div>
