Initial commit with admin.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="card-body">
           <h5 class="card-title fw-bold">Admin</h5>
           <p class="card-text">Manage employee records, view submitted photos, and verify attendance entries.</p>
-          <a href="#" class="btn btn-primary">Login as Admin</a>
+          <a href="admin.html" class="btn btn-primary">Login as Admin</a>
         </div>
       </div>
     </div>
